--- a/package.json
+++ b/package.json
@@ -22,9 +22,16 @@
   "dependencies": {
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/graphql": "^7.7.0",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/typeorm": "^6.3.1",
+    "apollo-server-express": "^2.19.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
+    "graphql": "^15.4.0",
+    "graphql-subscriptions": "^1.1.0",
+    "graphql-tools": "^7.0.1",
     "nodemon": "^2.0.2",
     "pg": "^7.18.1",
     "reflect-metadata": "^0.1.13",
